# 1-1-cloudwalk-chatbot

./: README.md  app.py  main.py  pyproject.toml
public/: index.html
public/css/: style.css
public/js/: main.js
src/modules/: llm_summarizer.py  search.py
src/schemas/: search_result.py
